--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,7 +2,10 @@
 @import "@nuxt/ui";
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  --font-family-base: "Inter", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-mono: ui-monospace, "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", monospace;
+  font-optical-sizing:auto
+  font-family: var(--font-family-base);
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
