feat: name and icon edit

--- a/src/assets/milkdown.scss
+++ b/src/assets/milkdown.scss
@@ -1,3 +1,5 @@
+@import "@milkdown/crepe/theme/common/style.css";
+
 [data-milkdown-root] {
   min-height: 100%;
   overflow-y: auto;
@@ -5,9 +7,12 @@
 
 .milkdown {
   min-height: 100%;
+
 }
 
-@import "@milkdown/crepe/theme/common/style.css";
+.milkdown .ProseMirror {
+  padding: 1rem 8rem 5rem;
+}
 
 :root.light {
   .milkdown {
