--- a/src/assets/milkdown.scss
+++ b/src/assets/milkdown.scss
@@ -1,8 +1,25 @@
 @import "@milkdown/crepe/theme/common/style.css";
+// @import "@milkdown/crepe/theme/frame.css";
+@import "@milkdown/crepe/theme/nord.css";
 
 [data-milkdown-root] {
   flex: 1;
 }
+
+.milkdown {
+    /* Font Families */
+  --crepe-font-title: Georgia, Cambria, "Times New Roman", Times, serif;
+  --crepe-font-default: "Open Sans", Arial, Helvetica, sans-serif;
+  --crepe-font-code:
+    Fira Code, Menlo, Monaco, "Courier New", Courier, monospace;
+  /* Small Shadow */
+  --crepe-shadow-1:
+    0px 1px 3px 1px rgba(0, 0, 0, 0.15), 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
+  /* Large Shadow */
+  --crepe-shadow-2:
+    0px 2px 6px 2px rgba(0, 0, 0, 0.15), 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
+}
+
 .milkdown .ProseMirror {
   padding: 1rem 8rem 5rem;
 }
