--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -3,8 +3,8 @@
 
 :root {
   --font-family-base: "Inter", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-family-mono: ui-monospace, "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", monospace;
-  font-optical-sizing:auto
+  --font-family-mono: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-optical-sizing: auto;
   font-family: var(--font-family-base);
   font-size: 16px;
   line-height: 24px;
